--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -29,8 +29,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "Zmp-aXNOI7h5",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "Zmp-aXNOI7h5"
       },
       "source": [
         "Lambda School Data Science\n",
@@ -78,11 +78,13 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
+        "colab": {},
         "colab_type": "code",
-        "id": "o9eSnDYhUGD7",
-        "colab": {}
+        "id": "o9eSnDYhUGD7"
       },
+      "outputs": [],
       "source": [
         "import sys\n",
         "\n",
@@ -98,33 +100,33 @@
         "# FutureWarning: Method .ptp is deprecated and will be removed in a future version. Use numpy.ptp instead.\n",
         "import warnings\n",
         "warnings.filterwarnings(action='ignore', category=FutureWarning, module='numpy')"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
+        "colab": {},
         "colab_type": "code",
-        "id": "4S2wXSrFV_g4",
-        "colab": {}
+        "id": "4S2wXSrFV_g4"
       },
+      "outputs": [],
       "source": [
         "# Read New York City apartment rental listing data\n",
         "import pandas as pd\n",
         "df = pd.read_csv(DATA_PATH+'apartments/renthop-nyc.csv')\n",
         "assert df.shape == (49352, 34)"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "gD0RT2woI7iC",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "gD0RT2woI7iC"
       },
+      "outputs": [],
       "source": [
         "# Remove outliers: \n",
         "# the most extreme 1% prices,\n",
@@ -133,37 +135,29 @@
         "df = df[(df['price'] >= 1375) & (df['price'] <= 15500) & \n",
         "        (df['latitude'] >=40.57) & (df['latitude'] < 40.99) &\n",
         "        (df['longitude'] >= -74.1) & (df['longitude'] <= -73.38)]"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 46,
       "metadata": {
-        "id": "2uid2PY7SSQS",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
         },
+        "colab_type": "code",
+        "id": "2uid2PY7SSQS",
         "outputId": "b330c1f7-9aac-4d31-c73e-1a94a41a9ffc"
       },
-      "source": [
-        "# Take a highlevel look at my data: 'bedrooms' (number of bedrooms in the unit) & 'price' (monthly rental cost)\n",
-        "print(f'Describe the bedroom feature data')\n",
-        "df['bedrooms'].describe()"
-      ],
-      "execution_count": 46,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Describe the bedroom feature data\n"
-          ],
-          "name": "stdout"
+          ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "count    48818.000000\n",
@@ -177,39 +171,40 @@
               "Name: bedrooms, dtype: float64"
             ]
           },
+          "execution_count": 46,
           "metadata": {
             "tags": []
           },
-          "execution_count": 46
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# Take a highlevel look at my data: 'bedrooms' (number of bedrooms in the unit) & 'price' (monthly rental cost)\n",
+        "print(f'Describe the bedroom feature data')\n",
+        "df['bedrooms'].describe()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 47,
       "metadata": {
-        "id": "jdkdjDNASzUU",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
         },
+        "colab_type": "code",
+        "id": "jdkdjDNASzUU",
         "outputId": "91f90b4c-1bca-4454-bcb7-01e70451d7e4"
       },
-      "source": [
-        "print(f'Describe the price feature data')\n",
-        "df['price'].describe()"
-      ],
-      "execution_count": 47,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Describe the price feature data\n"
-          ],
-          "name": "stdout"
+          ]
         },
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "count    48818.000000\n",
@@ -223,33 +218,32 @@
               "Name: price, dtype: float64"
             ]
           },
+          "execution_count": 47,
           "metadata": {
             "tags": []
           },
-          "execution_count": 47
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "print(f'Describe the price feature data')\n",
+        "df['price'].describe()"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 48,
       "metadata": {
-        "id": "PNFyhbvjS-b2",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 542
         },
+        "colab_type": "code",
+        "id": "PNFyhbvjS-b2",
         "outputId": "79823bab-e437-423e-f32d-6171a9d0bf0d"
       },
-      "source": [
-        "# Generate a scatterplot of bedrooms vs. price and apply a trendline\n",
-        "import plotly.express as px\n",
-        "px.scatter(df, x='bedrooms', y='price', trendline='ols', title='Plot \"# of Bedrooms\" vs. \"Rental Cost\"')"
-      ],
-      "execution_count": 48,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
             "text/html": [
               "<html>\n",
@@ -305,33 +299,41 @@
           },
           "metadata": {
             "tags": []
-          }
+          },
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "# Generate a scatterplot of bedrooms vs. price and apply a trendline\n",
+        "import plotly.express as px\n",
+        "px.scatter(df, x='bedrooms', y='price', trendline='ols', title='Plot \"# of Bedrooms\" vs. \"Rental Cost\"')"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "6-4XPi-zKoS1",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "6-4XPi-zKoS1"
       },
+      "outputs": [],
       "source": [
         "# Create a Linear Regression model object\n",
         "from sklearn.linear_model import LinearRegression\n",
         "\n",
         "mdl = LinearRegression()"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 0,
       "metadata": {
-        "id": "iD12-5DNLAAZ",
+        "colab": {},
         "colab_type": "code",
-        "colab": {}
+        "id": "iD12-5DNLAAZ"
       },
+      "outputs": [],
       "source": [
         "# Configure a features matrix (X) and the target vector (y)\n",
         "mtx_features = ['bedrooms']\n",
@@ -340,132 +342,125 @@
         "# Select the training feature (independent variable) and target (outcome variable)\n",
         "X_train = df[mtx_features]\n",
         "y_train = df[tgt]"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_vcwXJQNP3Ae",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# Fit the training data to the model\n",
-        "mdl.fit(X_train, y_train);\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NbShPrmvQOVU",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "4908cb90-afd4-43ff-e63d-1a1462f38815"
-      },
-      "source": [
-        "# Take a peak at the linear regression relationship\n",
-        "print(f'rental price = {round(mdl.coef_[0], 3)}*(# of bedrooms) + {round(mdl.intercept_, 3)}')"
-      ],
-      "execution_count": 52,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "rental price = 853.254*(# of bedrooms) + 2267.974\n"
-          ],
-          "name": "stdout"
-        }
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "mHBcU6KZT2bm",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "# predict_me calculates the models predicted rental cost given a number of bedrooms\n",
-        "def predict_me(num):\n",
-        "  return mdl.predict([[num]])[0]\n"
-      ],
       "execution_count": 0,
-      "outputs": []
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "_vcwXJQNP3Ae"
+      },
+      "outputs": [],
+      "source": [
+        "# Fit the training data to the model\n",
+        "mdl.fit(X_train, y_train);\n"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 52,
       "metadata": {
-        "id": "T4mmE9j7Vumf",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
         "colab_type": "code",
-        "colab": {}
+        "id": "NbShPrmvQOVU",
+        "outputId": "4908cb90-afd4-43ff-e63d-1a1462f38815"
       },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "rental price = 853.254*(# of bedrooms) + 2267.974\n"
+          ]
+        }
+      ],
+      "source": [
+        "# Take a peak at the linear regression relationship\n",
+        "print(f'rental price = {round(mdl.coef_[0], 3)}*(# of bedrooms) + {round(mdl.intercept_, 3)}')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 0,
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "mHBcU6KZT2bm"
+      },
+      "outputs": [],
+      "source": [
+        "# predict_me calculates the model's predicted rental cost given a number of bedrooms\n",
+        "def predict_me(num):\n",
+        "  return mdl.predict([[num]])[0]\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 0,
+      "metadata": {
+        "colab": {},
+        "colab_type": "code",
+        "id": "T4mmE9j7Vumf"
+      },
+      "outputs": [],
       "source": [
         "lst_beds = list(range(9))\n",
         "lst_prices = [0]*9\n",
         "tmp_dict = {'# of bedrooms': lst_beds, 'rental cost': lst_prices}\n",
         "\n",
         "df_predicted = pd.DataFrame(tmp_dict)\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 55,
       "metadata": {
-        "id": "hV-b3VRtZZOk",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
+        "colab_type": "code",
+        "id": "hV-b3VRtZZOk",
         "outputId": "a9719484-e15e-4b3c-9ed1-8c244f46b8ae"
       },
-      "source": [
-        "type(df_predicted['# of bedrooms'][3])"
-      ],
-      "execution_count": 55,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "numpy.int64"
             ]
           },
+          "execution_count": 55,
           "metadata": {
             "tags": []
           },
-          "execution_count": 55
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "type(df_predicted['# of bedrooms'][3])"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 56,
       "metadata": {
-        "id": "dI7z1YnSYlcQ",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 170
         },
+        "colab_type": "code",
+        "id": "dI7z1YnSYlcQ",
         "outputId": "12418747-c62b-43ec-88d5-e8a9f1231cdf"
       },
-      "source": [
-        "# Generate the rental cost for apartments with the number of bedrooms ranging from 0 (studio) to 8 bedrooms\n",
-        "for i in range(df_predicted.count()[0]):\n",
-        "  rent = predict_me(df_predicted['# of bedrooms'][i])\n",
-        "  print(f'Number of Bedrooms: {i} - Rental Cost: ${round(rent, 2)}')"
-      ],
-      "execution_count": 56,
       "outputs": [
         {
+          "name": "stdout",
           "output_type": "stream",
           "text": [
             "Number of Bedrooms: 0 - Rental Cost: $2267.97\n",
@@ -477,16 +472,21 @@
             "Number of Bedrooms: 6 - Rental Cost: $7387.5\n",
             "Number of Bedrooms: 7 - Rental Cost: $8240.75\n",
             "Number of Bedrooms: 8 - Rental Cost: $9094.01\n"
-          ],
-          "name": "stdout"
+          ]
         }
+      ],
+      "source": [
+        "# Generate the rental cost for apartments with the number of bedrooms ranging from 0 (studio) to 8 bedrooms\n",
+        "for i in range(df_predicted.count()[0]):\n",
+        "  rent = predict_me(df_predicted['# of bedrooms'][i])\n",
+        "  print(f'Number of Bedrooms: {i} - Rental Cost: ${round(rent, 2)}')"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "RnHkF2f7b6Yd",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "RnHkF2f7b6Yd"
       },
       "source": [
         "### Discussion\n",
