fixes high error and division warning

--- a/module3-ridge-regression/LS_DS_213_assignment.ipynb
+++ b/module3-ridge-regression/LS_DS_213_assignment.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,27 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 211,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ofd['LAND_SQUARE_FEET'].isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,50 +172,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 201,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Convert year to int64\n",
-    "ofd['YEAR_BUILT'] = ofd['YEAR_BUILT'].astype(int)\n",
-    "ofd['YEAR_BUILT'].dtypes"
+    "ofd['YEAR_BUILT'] = ofd['YEAR_BUILT'].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ofd['LAND_SQUARE_FEET'] = pd.to_numeric(ofd['LAND_SQUARE_FEET'].str.replace(',', ''))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 203,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 203,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ofd['LAND_SQUARE_FEET'] = pd.to_numeric(ofd['LAND_SQUARE_FEET'].str.replace(',', ''))\n",
-    "ofd['LAND_SQUARE_FEET'].dtype"
+    "# Convert zip codes to strings\n",
+    "ofd['ZIP_CODE'] = (\n",
+    "    ofd['ZIP_CODE']\n",
+    "    .astype(int)\n",
+    "    .astype(str)\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 204,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Drop some problematic columns\n",
+    "ofd = ofd.drop(['EASE-MENT', 'APARTMENT_NUMBER',\n",
+    "                    'TAX_CLASS_AT_TIME_OF_SALE'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,20 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Drop some problematic columns\n",
-    "train = train.drop(['EASE-MENT', 'APARTMENT_NUMBER',\n",
-    "                    'TAX_CLASS_AT_TIME_OF_SALE', 'ZIP_CODE'], axis=1)\n",
-    "test = test.drop(['EASE-MENT', 'APARTMENT_NUMBER', \n",
-    "                  'TAX_CLASS_AT_TIME_OF_SALE','ZIP_CODE'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -296,17 +264,17 @@
        "      <td>ADDRESS</td>\n",
        "      <td>2507</td>\n",
        "      <td>2497</td>\n",
-       "      <td>117-45 125TH STREET</td>\n",
+       "      <td>130-52 LEFFERTS BOULEVARD</td>\n",
        "      <td>2</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <td>LAND_SQUARE_FEET</td>\n",
+       "      <td>ZIP_CODE</td>\n",
        "      <td>2507</td>\n",
-       "      <td>887</td>\n",
-       "      <td>4,000</td>\n",
-       "      <td>234</td>\n",
+       "      <td>122</td>\n",
+       "      <td>10312</td>\n",
+       "      <td>115</td>\n",
        "      <td>NaT</td>\n",
        "      <td>NaT</td>\n",
        "    </tr>\n",
@@ -378,20 +346,20 @@
        "</div>"
       ],
       "text/plain": [
-       "                               count unique                      top  freq  \\\n",
-       "ADDRESS                         2507   2497      117-45 125TH STREET     2   \n",
-       "LAND_SQUARE_FEET                2507    887                    4,000   234   \n",
-       "SALE_DATE                       2507     68      2019-01-31 00:00:00    78   \n",
-       "BUILDING_CLASS_AT_PRESENT       2507     13                       A1   919   \n",
-       "BUILDING_CLASS_AT_TIME_OF_SALE  2507     11                       A1   919   \n",
-       "NEIGHBORHOOD                    2507      7                    OTHER  2360   \n",
-       "BOROUGH                         2507      5                        4  1204   \n",
-       "TAX_CLASS_AT_PRESENT            2507      2                        1  2476   \n",
-       "BUILDING_CLASS_CATEGORY         2507      1  01 ONE FAMILY DWELLINGS  2507   \n",
+       "                               count unique                        top  freq  \\\n",
+       "ADDRESS                         2507   2497  130-52 LEFFERTS BOULEVARD     2   \n",
+       "ZIP_CODE                        2507    122                      10312   115   \n",
+       "SALE_DATE                       2507     68        2019-01-31 00:00:00    78   \n",
+       "BUILDING_CLASS_AT_PRESENT       2507     13                         A1   919   \n",
+       "BUILDING_CLASS_AT_TIME_OF_SALE  2507     11                         A1   919   \n",
+       "NEIGHBORHOOD                    2507      7                      OTHER  2360   \n",
+       "BOROUGH                         2507      5                          4  1204   \n",
+       "TAX_CLASS_AT_PRESENT            2507      2                          1  2476   \n",
+       "BUILDING_CLASS_CATEGORY         2507      1    01 ONE FAMILY DWELLINGS  2507   \n",
        "\n",
        "                                    first       last  \n",
        "ADDRESS                               NaT        NaT  \n",
-       "LAND_SQUARE_FEET                      NaT        NaT  \n",
+       "ZIP_CODE                              NaT        NaT  \n",
        "SALE_DATE                      2019-01-01 2019-03-30  \n",
        "BUILDING_CLASS_AT_PRESENT             NaT        NaT  \n",
        "BUILDING_CLASS_AT_TIME_OF_SALE        NaT        NaT  \n",
@@ -401,7 +369,7 @@
        "BUILDING_CLASS_CATEGORY               NaT        NaT  "
       ]
      },
-     "execution_count": 114,
+     "execution_count": 206,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,49 +381,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Do one-hot encoding of categorical features\n",
     "\n",
     "\n",
-    "# Exclude high cardinality categorical variable from features\n",
+    "# Exclude high cardinality or unhelpful\n",
+    "# categorical variables from features\n",
     "target = 'SALE_PRICE'\n",
     "high_card = ['ADDRESS', \n",
     "             'SALE_DATE', \n",
-    "             'BUILDING_CLASS_AT_PRESENT', \n",
-    "             'BUILDING_CLASS_AT_TIME_OF_SALE']\n",
+    "             'BUILDING_CLASS_CATEGORY','TAX_CLASS_AT_PRESENT',\n",
+    "            'YEAR_BUILT', 'BUILDING_CLASS_AT_TIME_OF_SALE', \n",
+    "            'RESIDENTIAL_UNITS', 'COMMERCIAL_UNITS','BUILDING_CLASS_AT_PRESENT']\n",
     "features = train.columns.drop([target] + high_card)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['BOROUGH', 'NEIGHBORHOOD', 'BUILDING_CLASS_CATEGORY',\n",
-       "       'TAX_CLASS_AT_PRESENT', 'BLOCK', 'LOT', 'RESIDENTIAL_UNITS',\n",
-       "       'COMMERCIAL_UNITS', 'TOTAL_UNITS', 'LAND_SQUARE_FEET',\n",
-       "       'GROSS_SQUARE_FEET', 'YEAR_BUILT'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 215,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['BOROUGH', 'NEIGHBORHOOD', 'BLOCK', 'LOT', 'ZIP_CODE', 'TOTAL_UNITS',\n",
+      "       'LAND_SQUARE_FEET', 'GROSS_SQUARE_FEET'],\n",
+      "      dtype='object')\n",
+      "8\n"
+     ]
     }
    ],
    "source": [
-    "features"
+    "print(features)\n",
+    "print(len(features))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,36 +435,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 291,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dtype('int64')"
+       "(2507, 8)"
       ]
      },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y_test.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 117,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2507, 12)"
-      ]
-     },
-     "execution_count": 117,
+     "execution_count": 291,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -509,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 292,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,15 +469,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 293,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(2507, 23)\n",
-      "(644, 23)\n"
+      "(2507, 139)\n",
+      "(644, 139)\n"
      ]
     }
    ],
@@ -542,124 +489,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.set_option('display.max_columns', 30)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 174,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('int64')"
-      ]
-     },
-     "execution_count": 174,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train[\"YEAR_BUILT\"].dtype"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 242,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/josemarquez/anaconda3/lib/python3.7/site-packages/sklearn/feature_selection/univariate_selection.py:299: RuntimeWarning: divide by zero encountered in true_divide\n",
-      "  corr /= X_norms\n",
-      "/Users/josemarquez/anaconda3/lib/python3.7/site-packages/sklearn/feature_selection/univariate_selection.py:304: RuntimeWarning: invalid value encountered in true_divide\n",
-      "  F = corr ** 2 / (1 - corr ** 2) * degrees_of_freedom\n",
-      "/Users/josemarquez/anaconda3/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:901: RuntimeWarning: invalid value encountered in greater\n",
-      "  return (a < x) & (x < b)\n",
-      "/Users/josemarquez/anaconda3/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:901: RuntimeWarning: invalid value encountered in less\n",
-      "  return (a < x) & (x < b)\n",
-      "/Users/josemarquez/anaconda3/lib/python3.7/site-packages/scipy/stats/_distn_infrastructure.py:1892: RuntimeWarning: invalid value encountered in less_equal\n",
-      "  cond2 = cond0 & (x <= _a)\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Do feature selection\n",
-    "from sklearn.feature_selection import SelectKBest, f_regression\n",
-    "\n",
-    "selector = SelectKBest(score_func=f_regression, k=16)\n",
-    "\n",
-    "X_train_select = selector.fit_transform(X_train, y_train)\n",
-    "X_test_select = selector.transform(X_test)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "((2507, 15), (644, 15))"
-      ]
-     },
-     "execution_count": 101,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_train_select.shape, X_test_select.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ridge Regression, with alpha=0.001\n",
-      "Test MAE: $ 152934\n",
-      "Ridge Regression, with alpha=0.01\n",
-      "Test MAE: $ 152871\n",
-      "Ridge Regression, with alpha=0.1\n",
-      "Test MAE: $ 153635\n",
-      "Ridge Regression, with alpha=1.0\n",
-      "Test MAE: $ 169197\n",
-      "Ridge Regression, with alpha=1\n",
-      "Test MAE: $ 169197\n",
-      "Ridge Regression, with alpha=100.0\n",
-      "Test MAE: $ 210279\n",
-      "Ridge Regression, with alpha=1000.0\n",
-      "Test MAE: $ 211433\n"
+      "Lowest Ridge Regression Error:\n",
+      "\tMAE: $135,898.62\n",
+      "\tALPHA: 0.1\n",
+      "\tK: 139 of 139\n",
+      "Highest Ridge Regression Error:\n",
+      "\tMAE: $211,517.35\n",
+      "\tALPHA: 1000.0\n",
+      "\tK: 1 of 139\n"
      ]
     }
    ],
    "source": [
-    "# Fit into ridge regression\n",
+    "# Find best k and use it to find best MAE with ridge regression\n",
+    "from sklearn.feature_selection import SelectKBest, f_regression\n",
     "from sklearn.linear_model import Ridge\n",
     "from sklearn.metrics import mean_absolute_error\n",
     "\n",
-    "for alpha in [0.001, 0.01, 0.1, 1.0, 1, 100.0, 1000.0]:\n",
-    "    print(f'Ridge Regression, with alpha={alpha}')\n",
-    "    model = Ridge(alpha=alpha, normalize=True)\n",
-    "    model.fit(X_train_select, y_train)\n",
-    "    y_pred = model.predict(X_test_select)\n",
+    "highest_mae = None\n",
+    "alpha_used_for_highest_mae = None\n",
+    "k_used_for_highest_mae = None\n",
+    "lowest_mae = None\n",
+    "best_alpha = None\n",
+    "k_used = None\n",
+    "\n",
+    "for k in range(1, (X_train.shape[1]+1)):\n",
+    "    selector = SelectKBest(score_func=f_regression, k=k)\n",
+    "    X_train_select = selector.fit_transform(X_train, y_train)\n",
+    "    X_test_select = selector.transform(X_test)\n",
     "    \n",
-    "    mae = mean_absolute_error(y_test, y_pred)\n",
-    "    print(f'Test MAE: ${mae: .0f}')    "
+    "    for alpha in [0.001, 0.01, 0.1, 1.0, 1, 100.0, 1000.0]:\n",
+    "        model = Ridge(alpha=alpha, normalize=True)\n",
+    "        model.fit(X_train_select, y_train)\n",
+    "        y_pred = model.predict(X_test_select)\n",
+    "        mae = mean_absolute_error(y_test, y_pred)\n",
+    "               \n",
+    "        if k == 1:\n",
+    "            lowest_mae = mae\n",
+    "            highest_mae = mae\n",
+    "            alpha_used_for_highest_mae = alpha\n",
+    "            k_used_for_highest_mae = k\n",
+    "        else:\n",
+    "            if mae < lowest_mae:\n",
+    "                lowest_mae = mae\n",
+    "                best_alpha = alpha\n",
+    "                k_used = k\n",
+    "            if mae > highest_mae:\n",
+    "                highest_mae = mae\n",
+    "                alpha_used_for_highest_mae = alpha\n",
+    "                k_used_for_highest_mae = k\n",
+    "#         print(\"K: \", k)\n",
+    "#         print(mae)\n",
+    "#         print(alpha)\n",
+    "    \n",
+    "               \n",
+    "print(\"Lowest Ridge Regression Error:\")\n",
+    "print(f\"\\tMAE: ${lowest_mae:,.2f}\\n\\tALPHA: \"\\\n",
+    "      f\"{best_alpha}\\n\\tK: {k} of {X_train.shape[1]}\")\n",
+    "print(\"Highest Ridge Regression Error:\")\n",
+    "print(f\"\\tMAE: ${highest_mae:,.2f}\\n\\tALPHA: \"\\\n",
+    "      f\"{alpha_used_for_highest_mae}\\n\\tK: {k_used_for_highest_mae} of {X_train.shape[1]}\")"
    ]
   }
  ],
