--- a/module1-regression-1/LS_DS_211.ipynb
+++ b/module1-regression-1/LS_DS_211.ipynb
@@ -23,6 +23,7 @@
    "source": [
     "# Regression 1\n",
     "\n",
+    "This line was added in order to learn how to work locally\n",
     "- Begin with baselines for regression\n",
     "- Use scikit-learn to fit a linear regression\n",
     "- Explain the coefficients from a linear regression"
@@ -1014,7 +1015,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
