Finished main questions again

--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -1807,6 +1807,44 @@
       "source": [
         "### Define a function to make new predictions and explain the model coefficient"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lc42rtc2C8_7",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "a1905db4-a5aa-4b3e-89a1-1ce9da9b86b6"
+      },
+      "source": [
+        "def estimate(rooms):\n",
+        "    # predict rooms using linear model\n",
+        "    y_pred = model.predict([[rooms]])\n",
+        "    prediction = y_pred[0]\n",
+        "    # Estimated coefficients for the linear model\n",
+        "    coefficient = model.coef_[0]\n",
+        "\n",
+        "    \n",
+        "    result = f'${prediction:,.2f} is the estimated rent for a {rooms} bedroom New York apartment.'\n",
+        "    explain = f'With this linear regression model, each bedroom adds ${coefficient:,.2f} to the cost of rent.'\n",
+        "    return print(f'{result}\\n{explain}')\n",
+        "\n",
+        "estimate(2)"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "$3,974.48 is the estimated rent for a 2 bedroom New York apartment.\n",
+            "With this linear regression model, each bedroom adds $853.25 to the cost of rent.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
