--- a/module1-regression-1/LS_DS_211_assignment.ipynb
+++ b/module1-regression-1/LS_DS_211_assignment.ipynb
@@ -1737,7 +1737,6 @@
         "model = LinearRegression()\n",
         "\n",
         "# create X feature matrix ['bedrooms'] and y target ['price'] \n",
-        "\n",
         "X = df[['bedrooms']]\n",
         "y = df['price']\n",
         "\n",
@@ -1841,6 +1840,78 @@
           "text": [
             "$3,974.48 is the estimated rent for a 2 bedroom New York apartment.\n",
             "With this linear regression model, each bedroom adds $853.25 to the cost of rent.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "3yfjRtLbHGhh",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Stretch"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "KzLEsKf4HQVO",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f9086b04-f6bd-4425-e039-a0777eb58ffc"
+      },
+      "source": [
+        "modelS = LinearRegression()\n",
+        "\n",
+        "XX = df[['bedrooms', 'bathrooms']]\n",
+        "yy = df['price']\n",
+        "\n",
+        "modelS.fit(XX, yy)"
+      ],
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tmg6jKKLIB8N",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 51
+        },
+        "outputId": "9deae788-88cb-468b-e012-f26802ec62a4"
+      },
+      "source": [
+        "print(modelS.intercept_)\n",
+        "print(modelS.coef_)"
+      ],
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "464.8890243441597\n",
+            "[ 385.08418275 2099.14867224]\n"
           ],
           "name": "stdout"
         }
