--- a/module2-regression-2/LS_DS_212_assignment.ipynb
+++ b/module2-regression-2/LS_DS_212_assignment.ipynb
@@ -147,17 +147,17 @@
       "metadata": {
         "id": "5z1XerDVAr5b",
         "colab_type": "code",
+        "outputId": "8b1b3dd1-7e92-4280-9758-df825463f67f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 259
-        },
-        "outputId": "8b1b3dd1-7e92-4280-9758-df825463f67f"
+        }
       },
       "source": [
         "print(df.shape)\n",
         "df.head(2)"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -323,17 +323,17 @@
       "metadata": {
         "id": "c1JvOpNKD9_-",
         "colab_type": "code",
+        "outputId": "312d6040-cc3e-4426-d219-32b408910100",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 33
-        },
-        "outputId": "312d6040-cc3e-4426-d219-32b408910100"
+        }
       },
       "source": [
         "# Looking at the type of data that is shown in the created\n",
         "df['created'].dtype"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -368,18 +368,18 @@
       "metadata": {
         "id": "OaTtXqhFEmLL",
         "colab_type": "code",
+        "outputId": "ba5af677-82d8-413c-df6b-ef8107e01376",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 50
-        },
-        "outputId": "ba5af677-82d8-413c-df6b-ef8107e01376"
+        }
       },
       "source": [
         "df['created'] = pd.to_datetime(df['created'])\n",
         "# Looking at the year ranges of the  created info\n",
         "df['created'].dt.year.value_counts(dropna=False)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -451,17 +451,17 @@
       "metadata": {
         "id": "TYNmohPoLC_w",
         "colab_type": "code",
+        "outputId": "18ef35d6-a217-4352-bee5-c6dbab2b3617",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 350
-        },
-        "outputId": "18ef35d6-a217-4352-bee5-c6dbab2b3617"
+        }
       },
       "source": [
         "# Checking to see what values are held in the numPerks column\n",
         "df['numPerks'].value_counts()"
       ],
-      "execution_count": 17,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -501,11 +501,11 @@
       "metadata": {
         "id": "TdS5Am7lLXO3",
         "colab_type": "code",
+        "outputId": "9ed212f8-9e65-47fc-cb35-3a253c05daf4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 253
-        },
-        "outputId": "9ed212f8-9e65-47fc-cb35-3a253c05daf4"
+        }
       },
       "source": [
         "# Going to create a second feature\n",
@@ -514,7 +514,7 @@
         "df['description'].isnull().sum()\n",
         "\n"
       ],
-      "execution_count": 26,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,16 +586,16 @@
       "metadata": {
         "id": "SsMpFGqHRwUv",
         "colab_type": "code",
+        "outputId": "de37c3e8-01d4-4775-8627-4dce038d51f0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 418
-        },
-        "outputId": "de37c3e8-01d4-4775-8627-4dce038d51f0"
+        }
       },
       "source": [
         "df.head(4)"
       ],
-      "execution_count": 31,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -838,12 +838,236 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "OJ7UeFEuRy68",
+        "id": "4ZhNAQLHaBr2",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 84
+        },
+        "outputId": "fe432399-90ad-454b-8f61-bb556194b3a1"
+      },
+      "source": [
+        "df['created'].dt.month.value_counts()"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6    16973\n",
+              "4    16217\n",
+              "5    15627\n",
+              "Name: created, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qlXp9nr7aHhW",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ce23827d-076b-4940-9523-e2fbfcc699e2"
+      },
+      "source": [
+        "# Splitting my data for a train and test groups\n",
+        "train = df[df['created'].dt.month < 6 ]\n",
+        "test = df[df['created'].dt.month == 6]\n",
+        "print(train.shape, test.shape)"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "(31844, 36) (16973, 36)\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IY-CkIYtbKQ9",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# doing the imports for sklearn\n",
+        "from sklearn.linear_model import LinearRegression"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6__WsqnsbgcF",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "myModel = LinearRegression()"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kH1RG9YCb0yL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# I will try using 3 different features\n",
+        "# \"bedrooms\", 'numPerks', and 'descriptionLen'\n",
+        "features = ['bedrooms', \"numPerks\",'descriptionLen']\n",
+        "target = 'price'"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zEYyDmZHc1CE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "ebb1c74d-f8f0-4940-a115-8289c06da705"
+      },
+      "source": [
+        "# fitting my model\n",
+        "myModel.fit(train[features], train[target])"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 38
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Ohwe40uMdZV7",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# testing the model with the test group\n",
+        "y_preds = myModel.predict(test[features])"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "M-OZPUKKfU4S",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "48d7c9ed-429a-40ab-bcc5-4ece7e5ddba3"
+      },
+      "source": [
+        "print(f\"The coeficient is: {myModel.coef_}, and the intercept is: {myModel.intercept_}\")"
+      ],
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "The coeficient is: [8.10806204e+02 1.24307779e+02 3.53696343e-02], and the intercept is: 1717.3220948264493\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "iS3Ngs3siyY-",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 101
+        },
+        "outputId": "8f1f620f-57b1-47c7-fba9-209a231de8a0"
+      },
+      "source": [
+        "# Showing it in a pandas dataFrame\n",
+        "myCoef = pd.Series(myModel.coef_, features)\n",
+        "print('Intercept', myModel.intercept_)\n",
+        "print(myCoef)"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Intercept 1717.3220948264493\n",
+            "bedrooms          810.806204\n",
+            "numPerks          124.307779\n",
+            "descriptionLen      0.035370\n",
+            "dtype: float64\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RF8CJKGkgUB4",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
         ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2UngNy_pdv-m",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# creating a function to predict the  same thing \n",
+        "def makePred(mfeatures=features, mTarget='price'):\n",
+        "  model = LinearRegression()\n",
+        "  model.fit(train[mfeatures), mTarget)\n",
+        "  y_pred = model.predict(test[mfeatures])\n",
+        "  "
       ],
       "execution_count": 0,
       "outputs": []
